[gd_scene load_steps=4 format=2]

[ext_resource path="res://Font/ButtonFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Font/SmallFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Title/Tutorials/TutorialIndex.gd" type="Script" id=3]

[node name="Tutorials" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialsAndText" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Index" type="VBoxContainer" parent="TutorialsAndText"]
margin_right = 320.0
margin_bottom = 480.0
rect_min_size = Vector2( 320, 440 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combat" type="Button" parent="TutorialsAndText/Index"]
margin_right = 320.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 1 )
text = "Cómo combatir"
flat = true

[node name="Types" type="Button" parent="TutorialsAndText/Index"]
margin_top = 45.0
margin_right = 320.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 1 )
text = "Tipos de PCEOMÓN"
flat = true

[node name="Tutorial" type="VBoxContainer" parent="TutorialsAndText"]
margin_left = 324.0
margin_right = 624.0
margin_bottom = 480.0

[node name="Text" type="RichTextLabel" parent="TutorialsAndText/Tutorial"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 430.0
rect_min_size = Vector2( 300, 420 )
size_flags_horizontal = 7
size_flags_vertical = 3
custom_fonts/mono_font = ExtResource( 2 )
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 1 )
custom_fonts/normal_font = ExtResource( 2 )
text = "







             ¡Selecciona un tutorial!"

[node name="Exit" type="Button" parent="."]
margin_left = 218.814
margin_top = 437.628
margin_right = 432.814
margin_bottom = 478.628
custom_fonts/font = ExtResource( 1 )
text = "Volver al menú"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TutorialsAndText/Index/Combat" to="." method="_on_Combat_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
